feat: add dashboard API
- add sales summary
- add most sold products
- add most sold categories
- add total item and total quantity in expense and income
